feat: Enhance PWA capabilities
Adds PWA meta tags for better mobile experience, updates manifest.json with description and maskable icon, and refines service-worker.js for offline caching and stale-while-revalidate strategy.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#ffffff" />
+    
+    <!-- PWA Meta Tags -->
+    <meta name="theme-color" content="#1E40AF" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="VietQR Gen" />
+    <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
+
     <title>VietQR Code Generator</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="manifest" href="/manifest.json" />
